<resources>
    <string name="app_name">Chat</string>

    <!-- 登录界面 -->
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="registerNow">立即注册</string>
    <string name="forgetPwd">忘记密码?</string>
    <string name="codeLogin">验证码登录</string>

    <!--注册界面-->
    <string name="account">账号</string>
    <string name="confirmPwd">确认密码</string>
    <string name="register">注册</string>

    <!--修改密码界面-->
    <string name="pwd_old">原密码</string>
    <string name="pwd_new">新密码</string>
    <string name="reset">重置</string>
    <string name="resetPwd">重置密码</string>

    <!-- 个人信息界面 -->
    <string name="info">个人信息</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="accomplish">完成</string>
    <string name="next">跳过</string>

    <!--Fragment界面-->
    <string name="message">消息</string>
    <string name="contact">联系人</string>
    <string name="miniApps">小应用</string>
    <string name="add">添加</string>

    <!--小应用界面-->
    <string name="robot">聊天机器人</string>
    <string name="record">心情日志</string>
    <string name="news">新闻</string>
    <string name="weather">天气</string>
    <string name="joke">笑话大全</string>
    <string name="scan">扫一扫</string>

    <!--我的界面-->
    <string name="gallery">我的相册</string>
    <string name="diary">我的日志</string>
    <string name="settings">设置</string>
    <string name="share">分享APP</string>

    <!--添加界面popupWindow-->
    <string name="addFriend">加好友</string>
    <string name="voice">语音操作</string>

    <!--聊天界面-->
    <string name="send">发送</string>

    <!--联系人界面popupWindow-->
    <string name="delete">删除好友</string>
    <string name="detail">查看资料</string>

    <!--更换头像界面popupWindow-->
    <string name="camera">拍照</string>
    <string name="select">从相册选择</string>

    <!--联系人信息界面-->
    <string name="newFriend">新朋友</string>
    <string name="accid">账号</string>
    <string name="phone">手机号</string>
    <string name="birthday">生日</string>
    <string name="deleteFriend">删除好友</string>
    <string name="weChat">聊一聊</string>
    <string name="friendInfo">好友信息</string>
    <string name="conHint">您还没有联系人，快点击 + 添加</string>
    <string name="birthHint">请选择生日</string>
    <string name="phoneHint">请输入手机号</string>

    <!-- 消息界面-->
    <string name="msgHint">暂时没有新消息</string>

    <!--添加好友界面-->
    <string name="search">搜索</string>
    <string name="content">好友附言</string>
    <string name="friendHint">暂时没有新的好友请求</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <!--设置界面-->
    <string name="setVoice">声音</string>
    <string name="setVibration">振动</string>
    <string name="setPwd">修改密码</string>
    <string name="exit">退出登录</string>

    <!--语音识别-->
    <string name="voice_friend_add">加好友</string>
    <string name="voice_robot">机器人</string>
    <string name="voice_record">日志</string>
    <string name="voice_news">新闻</string>
    <string name="voice_weather">天气</string>
    <string name="voice_joke">笑话大全</string>
    <string name="voice_scan">扫一扫</string>

    <!--字体图标-->
    <string name="img_voice">&#xe601;</string>
    <string name="img_message">&#xe602;</string>
    <string name="img_camera">&#xe603;</string>
    <string name="img_back">&#xe604;</string>
    <string name="img_next">&#xe605;</string>
    <string name="img_expend">&#xe606;</string>
    <string name="img_merge">&#xe607;</string>
    <string name="img_down">&#xe608;</string>
    <string name="img_envelope">&#xe609;</string>
    <string name="img_orders">&#xe610;</string>
    <string name="img_accomplish">&#xe611;</string>
    <string name="img_search">&#xe612;</string>
    <string name="img_refresh">&#xe613;</string>
    <string name="img_setting">&#xe614;</string>
    <string name="img_scan">&#xe615;</string>
    <string name="img_delete">&#xe616;</string>
    <string name="img_QR">&#xe617;</string>
    <string name="img_user">&#xe618;</string>
    <string name="img_pwd">&#xe619;</string>
    <string name="img_chat">&#xe620;</string>
    <string name="img_news">&#xe621;</string>
    <string name="img_weather">&#xe622;</string>
    <string name="img_record">&#xe623;</string>
    <string name="img_robot">&#xe624;</string>
    <string name="img_share">&#xe625;</string>
    <string name="img_menu">&#xe626;</string>
    <string name="img_add">&#xe627;</string>
    <string name="img_head">&#xe628;</string>
    <string name="img_add_friend">&#xe629;</string>
    <string name="img_contact">&#xe630;</string>
    <string name="img_app">&#xe631;</string>
    <string name="img_pic">&#xe632;</string>
    <string name="img_icon">&#xe633;</string>
    <string name="img_female">&#xe634;</string>
    <string name="img_male">&#xe635;</string>
    <string name="img_exit">&#xe636;</string>
    <string name="img_sex_female">&#xe637;</string>
    <string name="img_sex_male">&#xe638;</string>
    <string name="img_refuse">&#xe639;</string>
    <string name="img_joke">&#xe640;</string>
    <string name="img_cancel">&#xe641;</string>
    <string name="img_edit">&#xe642;</string>
    <string name="img_save">&#xe643;</string>
    <string name="img_video">&#xe644;</string>


    <item name="Tag_Me" type="id"></item>
    <item name="Tag_Friend" type="id"></item>
    <string name="title_activity_galerry">GalerryActivity</string>

</resources>
