<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mirry.chat.activity.InfoSetActivity"
    android:orientation="vertical"
    android:background="@color/lightGray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/info"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:background="@color/darkBlue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_info"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:maxLength="10"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_info"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:padding="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sex"
                android:textColor="@color/darkBlue"
                android:gravity="center_vertical"/>

            <RadioGroup
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_toRightOf="@+id/tv_sex"
                android:layout_toEndOf="@+id/tv_sex">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/darkBlue"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"/>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/darkBlue"/>

            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_info"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmPwd"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/confirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_info"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:padding="5dp"/>

        <Button
            android:id="@+id/accomplish"
            style="@style/BtnTheme"
            android:layout_marginTop="40dp"
            android:text="@string/accomplish"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/setTip"
        android:textSize="12sp"
        android:textColor="@color/darkGray"
        android:layout_marginBottom="5dp"/>

</LinearLayout>
