<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mirry.chat.activity.MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/lightBlue"/>

    <RadioGroup
        android:id="@+id/tabsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TabRadioButtonTheme"
            android:text="@string/message"/>

        <RadioButton
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TabRadioButtonTheme"
            android:text="@string/contact"/>

        <RadioButton
            android:id="@+id/miniApps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TabRadioButtonTheme"
            android:text="@string/miniApps"/>

    </RadioGroup>

</LinearLayout>
