<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mirry.chat.activity.ContactInfoActivity"
    android:background="@color/bgBlue"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/darkBlue"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.example.mirry.chat.view.IconFontTextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img_back"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true" />

        <com.example.mirry.chat.view.IconFontTextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img_accomplish"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleBar">

        <com.example.mirry.chat.view.CircleImageView
            android:id="@+id/head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/head"
            android:scaleType="centerCrop"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/darkGray"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:background="@null"
            android:layout_toRightOf="@id/head"
            android:layout_toEndOf="@+id/head" />

        <EditText
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/darkGray"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:background="@null"
            android:layout_toRightOf="@id/head"
            android:layout_toEndOf="@+id/head"
            android:layout_below="@+id/nickname" />

        <EditText
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/darkGray"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:editable="false"
            android:background="@null"
            android:layout_toRightOf="@id/head"
            android:layout_toEndOf="@+id/head"
            android:layout_below="@+id/nickname" />

    </RelativeLayout>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="14sp"
        android:layout_below="@id/rl_title"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/darkGray"/>

    <EditText
        android:id="@+id/info_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:layout_toRightOf="@+id/phone"
        android:layout_toEndOf="@+id/phone"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/phoneHint"
        android:textSize="14sp"
        android:background="@null"
        android:maxLines="1"
        android:textColorHint="@color/hintGray"/>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_below="@id/phone"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:textSize="14sp"
        android:padding="10dp"
        android:textColor="@color/darkGray"/>

    <EditText
        android:id="@+id/info_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_toRightOf="@+id/birthday"
        android:layout_toEndOf="@+id/birthday"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="14sp"
        android:hint="@string/birthHint"
        android:background="@null"
        android:maxLines="1"
        android:textColorHint="@color/hintGray"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteFriend"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_login"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weChat"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_login"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone"/>

</RelativeLayout>
